add chart, add request GetAllPressureRecords
